--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -539,13 +539,21 @@
                         & .actions {
                             display: flex;
                             align-items: center;
+                            gap: 10px;
 
                             & .save {
                                 background: lightblue;
                                 font-size: 0.9em;
+
+                                &:hover,
+                                &:focus {
+                                    outline: none;
+                                    background: #8ac7db;
+                                }
                             }
 
                             & .cancel {
+                                transition: all 0.225s ease;
                                 display: flex;
                                 justify-content: center;
                                 align-items: center;
@@ -553,6 +561,14 @@
                                 background: none;
                                 font-size: 1.3em;
                                 cursor: pointer;
+                                border-radius: 50%;
+                                padding: 4px;
+
+                                &:hover,
+                                &:focus {
+                                    outline: none;
+                                    background: #d2d2d2;
+                                }
 
                                 & ion-icon {
                                     font-size: 1.2em;
@@ -610,6 +626,12 @@
                                 & .save {
                                     background: lightblue;
 
+                                    &:hover,
+                                    &:focus {
+                                        outline: none;
+                                        background: #8ac7db;
+                                    }
+
                                     &:disabled,
                                     &[disabled] {
                                         background: #e9e9e9;
@@ -627,6 +649,7 @@
                                     align-items: center;
 
                                     & button {
+                                        transition: all 0.225s ease;
                                         display: flex;
                                         justify-content: center;
                                         align-items: center;
