--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -670,6 +670,108 @@
                             }
                         }
                     }
+
+                    & .activity_list {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 10px;
+                        list-style: none;
+                        padding: 0;
+                        margin: 25px 0 10px 0;
+
+                        & img {
+                            width: 40px;
+                            height: 40px;
+                            border-radius: 50%;
+                            object-fit: cover;
+                        }
+
+                        & .comment {
+                            display: flex;
+                            gap: 10px;
+                            transition: all 0.225s ease;
+
+                            & .info {
+                                display: flex;
+                                width: calc(100% - 10px);
+                                flex-direction: column;
+
+                                & header {
+                                    display: flex;
+                                    gap: 5px;
+                                    align-items: flex-end;
+
+                                    & .sender {
+                                        font-weight: bold;
+                                        margin: 0;
+                                        font-size: 0.9em;
+                                    }
+                                    
+                                    & .time {
+                                        margin: 0;
+                                        color: #7d7d7d;
+                                        font-size: 0.8em;
+                                    }
+                                }
+
+                                & .message {
+                                    & textarea {
+                                        width: calc(100% - 16px);
+                                        border: 2px solid #e9e9e9;
+                                        background: #f6f6f6;
+                                        padding: 8px;
+                                        height: 20px;
+                                        font-size: 0.9em;
+                                        box-shadow: none;
+                                        margin-top: 5px;
+                                    }
+
+                                    & .actions {
+                                        display: flex;
+                                        align-items: center;
+                                        gap: 5px;
+
+                                        & button {
+                                            border: none;
+                                            background: none;
+                                            color: black;
+                                            padding: 0;
+                                            cursor: pointer;
+
+                                            &:hover,
+                                            & :focus {
+                                                text-decoration: underline;
+                                                outline: none;
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+
+                        & .event {
+                            display: flex;
+                            gap: 10px;
+                            transition: all 0.225s ease;
+                            align-items: center;
+
+                            & .info {
+                                display: flex;
+                                flex-direction: column;
+
+                                & .history {
+                                    margin: 0;
+                                    font-size: 0.9em;
+                                }
+
+                                & .time {
+                                    margin: 0;
+                                    color: #7d7d7d;
+                                    font-size: 0.8em;
+                                }
+                            }
+                        }
+                    }
                 }
             }
 
