--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -599,76 +599,6 @@
                             border-radius: 50%;
                             object-fit: cover;
                         }
-
-                        & .comment_form {
-                            flex-grow: 1;
-                            border-radius: 8px;
-                            position: relative;
-                            overflow: hidden;
-
-                            & textarea {
-                                width: calc(100% - 20px);
-                                box-shadow: none;
-                                height: 69px;
-                                border: 2px solid #e9e9e9;
-                                background: #f6f6f6;
-                                font-size: 0.9em;
-                            }
-
-                            & .actions {
-                                display: flex;
-                                justify-content: space-between;
-                                align-items: center;
-                                font-size: 0.9em;
-                                padding: 0px 8px;
-                                transform: translate(0, -52px);
-
-                                & .save {
-                                    background: lightblue;
-
-                                    &:hover,
-                                    &:focus {
-                                        outline: none;
-                                        background: #8ac7db;
-                                    }
-
-                                    &:disabled,
-                                    &[disabled] {
-                                        background: #e9e9e9;
-                                        cursor: default;
-
-                                        &:hover {
-                                            background: #e9e9e9;
-                                        }
-                                    }
-                                }
-
-                                & .comment_options {
-                                    display: flex;
-                                    gap: 10px;
-                                    align-items: center;
-
-                                    & button {
-                                        transition: all 0.225s ease;
-                                        display: flex;
-                                        justify-content: center;
-                                        align-items: center;
-                                        background: transparent;
-                                        padding: 8px;
-                                        border: none;
-                                        border-radius: 50%;
-                                        font-size: 1.1em;
-                                        cursor: pointer;
-
-                                        &:hover,
-                                        &:focus {
-                                            outline: none;
-                                            background: #e9e9e9;
-                                        }
-                                    }
-                                }
-                            }
-                        }
                     }
 
                     & .activity_list {
@@ -706,44 +636,11 @@
                                         margin: 0;
                                         font-size: 0.9em;
                                     }
-                                    
+
                                     & .time {
                                         margin: 0;
                                         color: #7d7d7d;
                                         font-size: 0.8em;
-                                    }
-                                }
-
-                                & .message {
-                                    & textarea {
-                                        width: calc(100% - 16px);
-                                        border: 2px solid #e9e9e9;
-                                        background: #f6f6f6;
-                                        padding: 8px;
-                                        height: 20px;
-                                        font-size: 0.9em;
-                                        box-shadow: none;
-                                        margin-top: 5px;
-                                    }
-
-                                    & .actions {
-                                        display: flex;
-                                        align-items: center;
-                                        gap: 5px;
-
-                                        & button {
-                                            border: none;
-                                            background: none;
-                                            color: black;
-                                            padding: 0;
-                                            cursor: pointer;
-
-                                            &:hover,
-                                            & :focus {
-                                                text-decoration: underline;
-                                                outline: none;
-                                            }
-                                        }
                                     }
                                 }
                             }
@@ -769,6 +666,97 @@
                                     color: #7d7d7d;
                                     font-size: 0.8em;
                                 }
+                            }
+                        }
+                    }
+
+                    & .comment_form {
+                        flex-grow: 1;
+                        border-radius: 8px;
+                        position: relative;
+                        overflow: hidden;
+
+                        & textarea {
+                            width: calc(100% - 20px);
+                            box-shadow: none;
+                            height: 69px;
+                            border: 2px solid #e9e9e9;
+                            background: #f6f6f6;
+                            font-size: 0.9em;
+                            transition: all 0.225s ease;
+                        }
+
+                        & .actions {
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+                            font-size: 0.9em;
+                            padding: 0px 8px;
+                            transform: translate(0, -52px);
+
+                            & .save {
+                                background: lightblue;
+
+                                &:hover,
+                                &:focus {
+                                    outline: none;
+                                    background: #8ac7db;
+                                }
+
+                                &:disabled,
+                                &[disabled] {
+                                    background: #e9e9e9;
+                                    cursor: default;
+
+                                    &:hover {
+                                        background: #e9e9e9;
+                                    }
+                                }
+                            }
+
+                            & .comment_options {
+                                display: flex;
+                                gap: 10px;
+                                align-items: center;
+
+                                & button {
+                                    transition: all 0.225s ease;
+                                    display: flex;
+                                    justify-content: center;
+                                    align-items: center;
+                                    background: transparent;
+                                    padding: 8px;
+                                    border: none;
+                                    border-radius: 50%;
+                                    font-size: 1.1em;
+                                    cursor: pointer;
+
+                                    &:hover,
+                                    &:focus {
+                                        outline: none;
+                                        background: #e9e9e9;
+                                    }
+                                }
+                            }
+                        }
+                    }
+
+                    & .comment_actions {
+                        display: flex;
+                        align-items: center;
+                        gap: 5px;
+
+                        & button {
+                            border: none;
+                            background: none;
+                            color: black;
+                            padding: 0;
+                            cursor: pointer;
+
+                            &:hover,
+                            & :focus {
+                                text-decoration: underline;
+                                outline: none;
                             }
                         }
                     }
