--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -761,6 +761,49 @@
                         }
                     }
                 }
+
+                & .checklist .content {
+                    & .progress_bar {
+                        display: flex;
+                        width: calc(100% - 8px);
+                        gap: 10px;
+                        align-items: center;
+                        margin-bottom: 6px;
+
+                        & .percentage {
+                            font-size: 0.8em;
+                            margin: 0;
+                            min-width: 30px;
+                            text-align: center;
+                        }
+
+                        & .bar {
+                            flex-grow: 1;
+                            height: 8px;
+                            border-radius: 8px;
+                            overflow: hidden;
+                            background: #f6f6f6;
+                            box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.24);
+
+                            & .progress {
+                                width: 50%;
+                                height: 8px;
+                                border-radius: 8px;
+                                background: #61bd4f;
+                            }
+                        }
+                    }
+
+                    & .item_list {
+                        width: 100%;
+                        min-height: 8px;
+                    }
+
+                    & .add_item {
+                        font-size: 0.9em;
+                        margin-left: 40px;
+                    }
+                }
             }
 
             & .actions_list {
