--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -684,6 +684,11 @@
                             background: #f6f6f6;
                             font-size: 0.9em;
                             transition: all 0.225s ease;
+
+                            &:disabled,
+                            &[disabled] {
+                                color: black;
+                            }
                         }
 
                         & .actions {
@@ -797,6 +802,124 @@
                     & .item_list {
                         width: 100%;
                         min-height: 8px;
+
+                        & .item {
+                            width: 100%;
+                            display: flex;
+                            padding: 8px 0;
+                            margin-bottom: 10px;
+
+                            & .check_container {
+                                height: 30px;
+                                display: block;
+                                position: relative;
+                                padding-left: 35px;
+                                cursor: pointer;
+                                font-size: 22px;
+                                -webkit-user-select: none;
+                                -moz-user-select: none;
+                                -ms-user-select: none;
+                                user-select: none;
+
+                                &:hover input ~ .checkmark {
+                                    background-color: #ccc;
+                                }
+
+                                & input {
+                                    position: absolute;
+                                    opacity: 0;
+                                    cursor: pointer;
+                                    height: 0;
+                                    width: 0;
+
+                                    &:checked ~ .checkmark {
+                                        background-color: #61bd4f;
+                                    }
+
+                                    &:checked ~ .checkmark:after {
+                                        display: block;
+                                    }
+                                }
+
+                                & .checkmark {
+                                    position: absolute;
+                                    top: 5px;
+                                    left: 0;
+                                    height: 25px;
+                                    width: 25px;
+                                    background-color: #eee;
+                                    border-radius: 6px;
+
+                                    &:after {
+                                        content: "";
+                                        position: absolute;
+                                        display: none;
+                                        left: 9px;
+                                        top: 5px;
+                                        width: 5px;
+                                        height: 10px;
+                                        border: solid white;
+                                        border-width: 0 3px 3px 0;
+                                        -webkit-transform: rotate(45deg);
+                                        -ms-transform: rotate(45deg);
+                                        transform: rotate(45deg);
+                                    }
+                                }
+                            }
+
+                            & .item_form {
+                                margin-left: 5px;
+                                flex-grow: 1;
+
+                                & textarea {
+                                    background: transparent;
+                                    box-shadow: none;
+                                    border: 3px solid lightblue;
+                                    width: calc(100% - 21px);
+                                }
+
+                                & .actions {
+                                    display: flex;
+                                    align-items: center;
+                                    gap: 10px;
+
+                                    & .save {
+                                        background: lightblue;
+                                        font-size: 0.9em;
+
+                                        &:hover,
+                                        &:focus {
+                                            outline: none;
+                                            background: #8ac7db;
+                                        }
+                                    }
+
+                                    & .cancel {
+                                        transition: all 0.225s ease;
+                                        display: flex;
+                                        justify-content: center;
+                                        align-items: center;
+                                        border: none;
+                                        background: none;
+                                        font-size: 1.3em;
+                                        cursor: pointer;
+                                        border-radius: 50%;
+                                        padding: 4px;
+
+                                        &:hover,
+                                        &:focus {
+                                            outline: none;
+                                            background: #d2d2d2;
+                                        }
+
+                                        & ion-icon {
+                                            font-size: 1.2em;
+                                            transform: rotate(45deg);
+                                        }
+                                    }
+                                }
+                            }
+                        }
                     }
 
                     & .add_item {
