--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -493,7 +493,7 @@
                 width: 75%;
                 display: flex;
                 flex-direction: column;
-                gap: 30px;
+                gap: 25px;
 
                 & .description .content {
                     padding-left: 45px;
@@ -539,7 +539,7 @@
                         & .actions {
                             display: flex;
                             align-items: center;
-                            gap: 10px;
+                            gap: 5px;
 
                             & .save {
                                 background: lightblue;
@@ -721,7 +721,7 @@
 
                             & .comment_options {
                                 display: flex;
-                                gap: 10px;
+                                gap: 5px;
                                 align-items: center;
 
                                 & button {
@@ -770,7 +770,6 @@
                 & .checklist .content {
                     & .progress_bar {
                         display: flex;
-                        width: calc(100% - 8px);
                         gap: 10px;
                         align-items: center;
                         margin-bottom: 6px;
@@ -800,14 +799,21 @@
                     }
 
                     & .item_list {
-                        width: 100%;
+                        width: calc(100% + 16px);
                         min-height: 8px;
+                        transform: translateX(-8px);
 
                         & .item {
-                            width: 100%;
+                            transition: all 0.225s ease;
+                            width: calc(100% - 16px);
                             display: flex;
-                            padding: 8px 0;
+                            padding: 8px;
                             margin-bottom: 10px;
+                            border-radius: 8px;
+
+                            &:hover {
+                                background: #f6f6f6;
+                            }
 
                             & .check_container {
                                 height: 30px;
@@ -822,7 +828,7 @@
                                 user-select: none;
 
                                 &:hover input ~ .checkmark {
-                                    background-color: #ccc;
+                                    background: #f6f6f6;
                                 }
 
                                 & input {
@@ -833,7 +839,8 @@
                                     width: 0;
 
                                     &:checked ~ .checkmark {
-                                        background-color: #61bd4f;
+                                        background: #61bd4f;
+                                        outline: none;
                                     }
 
                                     &:checked ~ .checkmark:after {
@@ -842,22 +849,24 @@
                                 }
 
                                 & .checkmark {
+                                    transition: all 0.225s ease;
                                     position: absolute;
                                     top: 5px;
-                                    left: 0;
-                                    height: 25px;
-                                    width: 25px;
-                                    background-color: #eee;
-                                    border-radius: 6px;
+                                    left: 3px;
+                                    height: 20px;
+                                    width: 20px;
+                                    background: #fff;
+                                    outline: 2px solid #e9e9e9;
+                                    border-radius: 3px;
 
                                     &:after {
                                         content: "";
                                         position: absolute;
                                         display: none;
-                                        left: 9px;
-                                        top: 5px;
-                                        width: 5px;
-                                        height: 10px;
+                                        left: 6.5px;
+                                        top: 2.5px;
+                                        width: 4px;
+                                        height: 8px;
                                         border: solid white;
                                         border-width: 0 3px 3px 0;
                                         -webkit-transform: rotate(45deg);
@@ -872,49 +881,82 @@
                                 flex-grow: 1;
 
                                 & textarea {
-                                    background: transparent;
+                                    background: #f6f6f6;
                                     box-shadow: none;
-                                    border: 3px solid lightblue;
+                                    outline: 2px solid #e9e9e9;
                                     width: calc(100% - 21px);
+                                    height: 69px;
+                                    font-size: 0.9em;
                                 }
 
                                 & .actions {
                                     display: flex;
                                     align-items: center;
-                                    gap: 10px;
+                                    justify-content: space-between;
 
-                                    & .save {
-                                        background: lightblue;
-                                        font-size: 0.9em;
+                                    & .actions_left {
+                                        display: flex;
+                                        align-items: center;
+                                        gap: 5px;
 
-                                        &:hover,
-                                        &:focus {
-                                            outline: none;
-                                            background: #8ac7db;
+                                        & .save {
+                                            background: lightblue;
+                                            font-size: 0.9em;
+
+                                            &:hover,
+                                            &:focus {
+                                                outline: none;
+                                                background: #8ac7db;
+                                            }
+                                        }
+
+                                        & .cancel {
+                                            transition: all 0.225s ease;
+                                            display: flex;
+                                            justify-content: center;
+                                            align-items: center;
+                                            border: none;
+                                            background: none;
+                                            font-size: 1.3em;
+                                            cursor: pointer;
+                                            border-radius: 50%;
+                                            padding: 4px;
+
+                                            &:hover,
+                                            &:focus {
+                                                outline: none;
+                                                background: #d2d2d2;
+                                            }
+
+                                            & ion-icon {
+                                                font-size: 1.2em;
+                                                transform: rotate(45deg);
+                                            }
                                         }
                                     }
 
-                                    & .cancel {
-                                        transition: all 0.225s ease;
+                                    & .actions_right {
                                         display: flex;
-                                        justify-content: center;
+                                        gap: 5px;
                                         align-items: center;
-                                        border: none;
-                                        background: none;
-                                        font-size: 1.3em;
-                                        cursor: pointer;
-                                        border-radius: 50%;
-                                        padding: 4px;
 
-                                        &:hover,
-                                        &:focus {
-                                            outline: none;
-                                            background: #d2d2d2;
-                                        }
+                                        & .option {
+                                            transition: all 0.225s ease;
+                                            display: flex;
+                                            justify-content: center;
+                                            align-items: center;
+                                            background: transparent;
+                                            padding: 8px;
+                                            border: none;
+                                            border-radius: 50%;
+                                            font-size: 1em;
+                                            cursor: pointer;
 
-                                        & ion-icon {
-                                            font-size: 1.2em;
-                                            transform: rotate(45deg);
+                                            &:hover,
+                                            &:focus {
+                                                outline: none;
+                                                background: #e9e9e9;
+                                            }
                                         }
                                     }
                                 }
@@ -929,7 +971,7 @@
                 }
             }
 
-            & .actions_list {
+            & .modules_list {
                 width: 25%;
 
                 & .module {
@@ -949,10 +991,10 @@
                         padding: 0;
                         display: flex;
                         flex-direction: column;
-                        gap: 5px;
+                        gap: 10px;
 
                         & .module_action {
-                            & button {
+                            & .icon_text_button {
                                 background: #e9e9e9;
 
                                 &:hover,
