--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -82,7 +82,7 @@ textarea {
             }
         }
 
-        & .title {
+        & .dropdown_title {
             font-size: 1rem;
             width: 100%;
             margin: 0;
@@ -123,6 +123,26 @@ textarea {
             padding: 8px;
             font-size: 0.9rem;
             margin-bottom: 10px;
+
+            &.content_title {
+                padding: 0;
+                font-weight: 600;
+            }
+        }
+
+        & input {
+            transition: all 0.225s ease;
+            width: calc(100% - 20px);
+            border: 2px solid #e9e9e9;
+            padding: 8px;
+            border-radius: 8px;
+            margin-bottom: 10px;
+            font-size: 0.9em;
+
+            &:focus {
+                border: 2px solid lightblue;
+                outline: none;
+            }
         }
 
         & button:disabled,
@@ -132,6 +152,17 @@ textarea {
 
             &:hover {
                 background: none;
+            }
+        }
+
+        & .text_button {
+            background: lightblue;
+            width: fit-content;
+
+            &:hover,
+            &:focus {
+                outline: none;
+                background: #8ac7db;
             }
         }
 
